# lrzcc

./: .deny.toml  .dockerignore  .env  .gitignore  .mariadb.cnf  .rustfmt.toml  .spellcheck.dic  .spellcheck.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  configuration
.cargo/: config.toml
.github/: dependabot.yml  labeler.yml
.sqlx/: query-01a3429e170172a401e79a9fdc5b9544f912ed346040ec9bf9da4d5011cd8d0d.json  query-02cb2b4037e54963bf314b3520bf890b82c524a8ed36e9464852a0fc22ca9d21.json  query-0793004660ef0458ba83985897ae86eb80d1026e0e6683573057ae3922f79d2e.json  query-099117f6a99d4c075650b0f2ae23412181599cc8aecd533847f6f2cb35ad1358.json  query-09a9ef34d677162682cb48625be4ff6166cbf56e37152791b02ee07b4495aee6.json  query-0bfbbcad56250fc5c42eeb3fe3f641c9021dd20635876281b6f60d2ba3369936.json  query-0cd6ae84400d5fbb5964a9cab3b8b4b499f3ba6c9b63154bdf56a09017b91ebf.json  query-124b3eb6471fc727a4c917646173b8c88252b8fc8d1c2e7a5f13c4f1634efcad.json  query-12dedd71e6dd2833be919bb45078d57373bf9af49342c114d696556d9843d652.json  (+104 more)
.vim/: coc-settings.json
api/: Cargo.toml  Dockerfile  README.md
api/configuration/: base.yaml  local.yaml  production.yaml
api/migrations/: 20240912151726_create_project_table.sql  20240913084652_create_user_project_table.sql  20240913084746_create_user_user_table.sql  20240929185134_create_resources_flavorgroup_table.sql  20241010081852_create_resources_flavor_table.sql  20241010081921_create_accounting_state_table.sql  20241010081929_create_accounting_server_state_table.sql  20241010083346_create_quota_quota_table.sql  20241010083428_create_quota_flavorquota_table.sql  20241010083959_create_pricing_flavorprice_table.sql  20241010085232_create_budgeting_projectbudget_table.sql  20241010085322_create_budgeting_userbudget_table.sql
api/src/: authentication.rs  authorization.rs  configuration.rs  error.rs  lib.rs  main.rs  openstack.rs  startup.rs  telemetry.rs  utils.rs
api/src/database/: mod.rs
api/src/database/accounting/: mod.rs  server_state.rs
api/src/database/budgeting/: mod.rs  project_budget.rs  user_budget.rs
api/src/database/pricing/: flavor_price.rs  mod.rs
api/src/database/quota/: flavor_quota.rs  mod.rs
api/src/database/resources/: flavor.rs  flavor_group.rs  mod.rs
api/src/database/user/: mod.rs  project.rs  user.rs
api/src/routes/: health_check.rs  hello.rs  mod.rs
api/src/routes/accounting/: mod.rs
api/src/routes/accounting/server_consumption/: get.rs  mod.rs
api/src/routes/accounting/server_cost/: get.rs  mod.rs
api/src/routes/accounting/server_state/: create.rs  delete.rs  get.rs  import.rs  list.rs  mod.rs  modify.rs
api/src/routes/budgeting/: bulk_create.rs  mod.rs
api/src/routes/budgeting/project_budget/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs  over.rs
api/src/routes/budgeting/user_budget/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs  over.rs  sync.rs
api/src/routes/pricing/: mod.rs
api/src/routes/pricing/flavor_price/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
api/src/routes/quota/: mod.rs
api/src/routes/quota/flavor_quota/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
api/src/routes/resources/: mod.rs
api/src/routes/resources/flavor/: create.rs  delete.rs  get.rs  import.rs  list.rs  mod.rs  modify.rs
api/src/routes/resources/flavor_group/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
api/src/routes/user/: me.rs  mod.rs  project.rs
api/src/routes/user/project/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
api/src/routes/user/user/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
api/tests/api/: health_check.rs  hello.rs  helpers.rs  main.rs
api/tests/api/hello/: admin.rs  mod.rs  user.rs
cli/: Cargo.toml  README.md
cli/src/: common.rs  hello.rs  main.rs  pricing.rs
cli/src/accounting/: mod.rs  server_consumption.rs  server_cost.rs  server_state.rs
cli/src/budgeting/: budget_bulk_create.rs  budget_over_tree.rs  mod.rs  project_budget.rs  user_budget.rs
cli/src/quota/: flavor_quota.rs  mod.rs
cli/src/resources/: flavor.rs  flavor_group.rs  mod.rs  usage.rs
cli/src/user/: mod.rs  project.rs  user.rs
lib/: Cargo.toml  README.md
lib/src/: common.rs  error.rs  hello.rs  lib.rs  pricing.rs  token.rs
lib/src/accounting/: server_consumption.rs  server_cost.rs  server_state.rs
lib/src/budgeting/: budget_bulk_create.rs  budget_over_tree.rs  project_budget.rs  user_budget.rs
lib/src/lib/budgeting/: project_budget.rs
lib/src/quota/: flavor_quota.rs
lib/src/resources/: flavor.rs  flavor_group.rs  mod.rs  usage.rs
lib/src/user/: project.rs  user.rs
scripts/: init.sh  (+14 more)
test/: Cargo.toml  configuration
test/benches/: main.rs
test/src/: lib.rs
test/tests/: bench.rs  hello.rs  main.rs
test/tests/accounting/: mod.rs
test/tests/accounting/server_state/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
test/tests/budgeting/: mod.rs
test/tests/budgeting/project_budget/: delete.rs  get.rs  mod.rs  over.rs
test/tests/budgeting/user_budget/: delete.rs  get.rs  mod.rs  over.rs
test/tests/pricing/: mod.rs
test/tests/pricing/flavor_price/: delete.rs
test/tests/quota/: mod.rs
test/tests/quota/flavor_quota/: delete.rs
test/tests/resources/: mod.rs
test/tests/resources/flavor/: delete.rs  mod.rs  modify.rs
test/tests/resources/flavor_group/: delete.rs  modify.rs
test/tests/user/: me.rs  mod.rs  project.rs
test/tests/user/project/: create.rs  delete.rs  get.rs  list.rs  mod.rs  modify.rs
test/tests/user/user/: create.rs  delete.rs  get.rs  list.rs  me.rs  mod.rs  modify.rs
ui/: Cargo.toml  Dockerfile  README.md
ui/src/: main.rs
wire/: Cargo.toml  README.md
wire/src/: common.rs  error.rs  hello.rs  lib.rs  pricing.rs  quota.rs
wire/src/accounting/: mod.rs  server_consumption.rs  server_cost.rs  server_state.rs
wire/src/budgeting/: budget_bulk_create.rs  budget_over_tree.rs  mod.rs  project_budget.rs  user_budget.rs
wire/src/resources/: flavor.rs  flavor_group.rs  mod.rs  usage.rs
wire/src/user/: mod.rs  project.rs  user.rs
(+58 files in other folders)
