[package]
name = "lrzcc"
description = "Rust client and CLI application for the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/lrzcc-rs"
repository = "https://github.com/LRZ-BADW/lrzcc-rs"
exclude = []
readme = "README.md"
license = "MIT"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "lrzcc"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "all"]
cli = ["clap", "colored", "jzon"]
vendored-tls = ["reqwest/native-tls-vendored"]
all = ["accounting", "budgeting", "hello", "pricing"]
accounting = []
budgeting = []
hello = []
pricing = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
# cli
clap = { version = "4.5", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }
jzon = { version = "0.12", optional = true }
