[package]
name = "lrzcc-cli"
description = "Rust CLI client for the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings", "command-line-utilities"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/lrzcc"
repository = "https://github.com/LRZ-BADW/lrzcc"
exclude = []
readme = "README.md"
license = "MIT"
version = "1.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lrzcc"
path = "src/main.rs"

[features]
default = ["all"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = ["lrzcc/accounting"]
budgeting = ["lrzcc/budgeting"]
hello = ["lrzcc/hello"]
pricing = ["lrzcc/pricing"]
quota = ["lrzcc/quota"]
resources = ["lrzcc/resources"]
user = ["lrzcc/user"]

[dependencies]
lrzcc = { version = "1.1", path = "../lib" }
lrzcc-wire = { version = "1.0", path = "../wire" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tabled = "0.16"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"

[dev-dependencies]
cargo-husky = { workspace = true }
