[package]
name = "lrzcc"
description = "Rust client library for the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/lrzcc"
repository = "https://github.com/LRZ-BADW/lrzcc"
exclude = []
readme = "README.md"
license = "MIT"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lrzcc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["all"]
vendored-tls = ["reqwest/native-tls-vendored"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = []
budgeting = []
hello = []
pricing = []
quota = []
resources = []
user = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tabled = "0.16"
chrono = { version = "0.4", features = ["serde"] }
jzon = "0.12"
lrzcc-wire = { version = "1.0", path = "../wire" }

[dev-dependencies]
cargo-husky = { workspace = true }
