[package]
name = "lrzcc"
description = "Rust client library for the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/lrzcc"
repository = "https://github.com/LRZ-BADW/lrzcc"
exclude = []
readme = "README.md"
license = "MIT"
version = "1.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lrzcc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["all"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = ["lrzcc-wire/accounting"]
budgeting = ["lrzcc-wire/budgeting"]
hello = ["lrzcc-wire/hello"]
pricing = ["lrzcc-wire/pricing"]
quota = ["lrzcc-wire/quota"]
resources = ["lrzcc-wire/resources"]
user = ["lrzcc-wire/user"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
jzon = "0.12"
lrzcc-wire = { version = "1.6", path = "../wire" }

[dev-dependencies]
cargo-husky = { workspace = true }
