[package]
name = "avina"
description = "Rust client library for the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["api-bindings"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/avina"
repository = "https://github.com/LRZ-BADW/avina"
exclude = []
readme = "README.md"
license = "MIT"
version = "1.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "avina"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["all"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = ["avina-wire/accounting"]
budgeting = ["avina-wire/budgeting"]
hello = ["avina-wire/hello"]
pricing = ["avina-wire/pricing"]
quota = ["avina-wire/quota"]
resources = ["avina-wire/resources"]
user = ["avina-wire/user"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
jzon = "0.12"
avina-wire = { version = "1.7", path = "../wire" }

[dev-dependencies]
cargo-husky = { workspace = true }
