[package]
name = "lrzcc-test"
version = "0.5.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "lrzcc_test"
path = "src/lib.rs"

[[test]]
name = "main"
path = "tests/main.rs"

[[bench]]
name = "main"
harness = false

[dependencies]
lrzcc = { version = "1.7", path = "../lib" }
lrzcc-api = { version = "0.7", path = "../api" }
lrzcc-wire = { version = "1.6", path = "../wire" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
once_cell = "1"
wiremock = "0.6"
rand = "0.9"
chrono = "0.4"
anyhow = "1.0"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
cargo-husky = { workspace = true }
bencher = "0.1"
