[package]
name = "lrzcc-wire"
description = "Rust types for API communication of the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["web-programming"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/lrzcc"
repository = "https://github.com/LRZ-BADW/lrzcc"
exclude = []
readme = "README.md"
license = "MIT"
version = "1.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "lrzcc_wire"
path = "src/lib.rs"

[features]
default = ["all"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = []
budgeting = []
hello = []
pricing = []
quota = []
resources = []
user = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# uuid = { version = "1.10", features = ["v4", "serde"] }
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["macros", "mysql"] }

[dev-dependencies]
cargo-husky = { workspace = true }
