[package]
name = "avina-wire"
description = "Rust types for API communication of the LRZ-specific features of the Openstack-based LRZ Compute Cloud."
authors = ["Sandro-Alessio Gierens <sandro@gierens.de>"]
categories = ["web-programming"]
edition = "2021"
homepage = "https://github.com/LRZ-BADW/avina"
repository = "https://github.com/LRZ-BADW/avina"
exclude = []
readme = "README.md"
license = "MIT"
version = "1.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "avina_wire"
path = "src/lib.rs"

[features]
default = ["all"]
all = ["accounting", "budgeting", "hello", "pricing", "quota", "resources", "user"]
accounting = []
budgeting = []
hello = []
pricing = []
quota = []
resources = []
user = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tabled = "0.20"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["macros", "mysql"] }

[dev-dependencies]
cargo-husky = { workspace = true }
